--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -1,13 +1,21 @@
 .login-container {
-    width: 300px;
-    margin: 0 auto;
-    padding: 30px;
+  display: flex;
+
+  flex-wrap: wrap;
+  margin: 0 auto;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
-  
+  .sub{
+   margin: 20px;
+    width: 46%;
+   
+    height: 100vh;
+
+   
+  }
   h1 {
     text-align: center;
     font-size: 24px;
@@ -26,14 +34,15 @@
   input[type="text"],
   input[type="email"],
   input[type="password"] {
-    width: 90%;
-    padding: 10px;
+    display: block;
+    width: 50%;
+     margin: 10px;
     border: 1px solid #ccc;
     border-radius: 30px;
   }
   
   button {
-    width: 100%;
+    width: 50%;
     padding: 10px;
     background-color: #ff9933;
     color: #fff;
