--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -1,58 +1,36 @@
-.login-container {
-  display: flex;
 
-  flex-wrap: wrap;
-  margin: 0 auto;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  .sub{
-   margin: 20px;
-    width: 46%;
-   
-    height: 100vh;
-
-   
-  }
   h1 {
     text-align: center;
     font-size: 24px;
     margin-bottom: 20px;
   }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
+ 
+
   
   input[type="text"],
   input[type="email"],
   input[type="password"] {
     display: block;
-    width: 50%;
-     margin: 10px;
+     min-width: 50%; 
+     margin: 10px auto;
     border: 1px solid #ccc;
     border-radius: 30px;
   }
   
-  button {
-    width: 50%;
+  .login-button {
+    width: 30%;
     padding: 10px;
+    display: block;
+    margin: 5px auto;
     background-color: #ff9933;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
   }
-  
-  /* button:hover {
+ 
+  /* .login-button:hover {
     background-color: #0056b3;
   } */
   
