--- a/src/views/Cooksignup/Cooksignup.css
+++ b/src/views/Cooksignup/Cooksignup.css
@@ -14,3 +14,10 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+.heading{
+    color: white;
+    font-family: gabriola;
+    font-size: 50px;
+    margin-top: 20px;
+   
+}
