--- a/src/views/Usersignup/Usersignup.css
+++ b/src/views/Usersignup/Usersignup.css
@@ -1,29 +1,12 @@
 
 
-h1 {
-  text-align: center;
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 30px;
-}
 
 .sing-up-btn {
   width: 30%;
   padding: 10px;
   display: block;
-  margin: 5px auto;
-  background-color: #ff9933;
+  margin: 3px auto;
+  background-color: #ef801a;
   color: #fff;
   border: none;
   border-radius: 10px;
@@ -31,37 +14,13 @@ input[type="password"] {
   font-size: 16px;
 }
 
-
-@media (max-width: 1023px) {
-  h1 {
-    font-size: 20px;
-  }
-  
-  .sing-up-btn {
-    width: 40%;
-    font-size: 14px;
-  }
+.back-ground-signup{
+  background-image: url(https://foodindustryexecutive.com/wp-content/uploads/2022/06/bigstock-Food-Background-Food-Concept-W-445520756.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 115vh;
 }
-
-
-@media (max-width: 767px) {
-  h1 {
-    font-size: 18px;
-  }
-  
-  .form-group {
-    margin-bottom: 10px;
-  }
-
-  input[type="text"],
-  input[type="email"],
-  input[type="password"] {
-    padding: 8px;
-    border-radius: 20px;
-  }
-
-  .sing-up-btn {
-    width: 60%;
-    font-size: 12px;
-  }
+.sign-up-form{
+  background: rgba(0, 0, 0, 0.658);
+  height: 115vh;
 }
