--- a/src/ProfileCard/ProfileCard.css
+++ b/src/ProfileCard/ProfileCard.css
@@ -6,34 +6,50 @@
     border: 2px dashed white;
     display: block;
     margin: 20px auto;
+    position: absolute;
+    top: -105px;
+    left: 100px;
+}
+.user-name{
+    position: absolute;
+    top: 70px;
+    left: 130px;
 }
 .profile-img-div {
     display: block;
     margin: 12px auto;
     text-align: center;
-    background-color: #ff914d;
     width: 28vw;
+    height: 200px;
+    position: relative;
 }
 .card-container{
     height: 85vh;
     padding: 40px;
-    background-color: #ff914d;
+    /* background: rgba(0, 0, 0, 0.658);
+    height: 115vh; */
     border-radius: 0;
 }
 .profile-card{
     width: 30vw;
     margin: 5px auto;
+    padding: 10px 20px;
+    background: rgba(225, 216, 216, 0.658);
+    /* color: aliceblue; */
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    border-radius: 25px;
+    
 }
-/* .profile-card{
-    width: 30vw;
-    margin: 5px auto;
-} */
+
 .profile-info-div{
     margin: 20px 20px;
 
 }
 .profile-info{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgb(0, 0, 0);
+    position: relative;
+    bottom: 80px;
 }
 .icon{
     height: 20px;
@@ -49,5 +65,8 @@
     }
     .profile-img-div{
         width: 65vw;
+    }
+    .address{
+        width: 10vw;
     }
 }
