--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -4,40 +4,57 @@
   width: 300px; 
 } 
 */
-.login-bg-img{
+
+.login-bg-img {
   background-color: #fff;
-   padding:10px;
-   width:400px;
-   margin:0 auto;
-   border-radius: 10px;
+  padding: 10px;
+  width: 400px;
+  margin: 0 auto;
+  border-radius: 10px;
 }
-.login-button{
+
+.login-button {
   width: 20%;
   padding: 7px 10px;
-  
   display: block;
   margin: 0 auto;
   background-color: #ef801a;
   color: #fff;
   border: none;
-  border-radius: 10px; 
+  border-radius: 10px;
   cursor: pointer;
   font-size: 16px;
- 
 }
-.login-button:hover{
- 
+
+.login-button:hover {
   transform: scale(0.9);
 }
-.background-img{
 
-   background-size: cover;
+.background-img {
+  background-size: cover;
 }
-.form{
+
+.form {
   background-color: #ffffff7e;
   height: auto;
   width: 50%;
-  margin: 0px auto;
+  margin: 0 auto;
   padding: 30px;
   border-radius: 20px;
+}
+
+
+@media (max-width: 768px) {
+  .login-bg-img {
+    width: 90%; 
+  }
+
+  .login-button {
+    width: 50%; 
+  }
+
+  .form {
+    width: 90%; 
+    padding: 20px; 
+  }
 }
