handar error of profile page

--- a/src/ProfileCard/ProfileCard.css
+++ b/src/ProfileCard/ProfileCard.css
@@ -1,44 +1,43 @@
 
 .profile-img{
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     border-radius: 50%;
-    border: 2px dashed white;
     display: block;
     margin: 20px auto;
     position: absolute;
-    top: -105px;
-    left: 100px;
+    bottom: 120px;
+    left: 120px;
 }
 .user-name{
-    position: absolute;
-    top: 70px;
-    left: 130px;
+    margin-top:80px ;
+    margin-bottom: 20px;
 }
 .profile-img-div {
     display: block;
     margin: 12px auto;
     text-align: center;
     width: 28vw;
-    height: 200px;
+    height: 100px;
     position: relative;
 }
 .card-container{
-    height: 85vh;
+    height: 80vh;
     padding: 40px;
-    /* background: rgba(0, 0, 0, 0.658);
-    height: 115vh; */
+
     border-radius: 0;
 }
 .profile-card{
     width: 30vw;
-    margin: 5px auto;
+    margin: 45px auto;
     padding: 10px 20px;
-    background: rgba(225, 216, 216, 0.658);
+    background: rgba(246, 232, 232, 0.587);
     /* color: aliceblue; */
     font-size: 20px;
-    color: rgb(0, 0, 0);
+    font-weight: bolder;
+    color: black;
     border-radius: 25px;
+    /* box-shadow: 0 0 5px 5px rgba(225, 216, 216, 0.898); */
     
 }
 
