--- a/src/views/UserProfile/UserProfile.css
+++ b/src/views/UserProfile/UserProfile.css
@@ -1,5 +1,5 @@
 .Profile-page{
-    background-image: url(https://foodindustryexecutive.com/wp-content/uploads/2022/06/bigstock-Food-Background-Food-Concept-W-445520756.jpg);
+    background-image:linear-gradient(360deg , rgba(20, 19, 19, 0.726), rgba(20, 19, 19, 0.62)), url(https://foodindustryexecutive.com/wp-content/uploads/2022/06/bigstock-Food-Background-Food-Concept-W-445520756.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 115vh;
@@ -11,16 +11,7 @@
 .bg-white{
     background-color: white;
 }
-.side-img{
-    height: 100vh;
-    position: relative;
-    right: 60px;
-}
-.profile-side-templet{
-    background-color: white;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
+
 .heading{
     color: white;
     font-family: gabriola;
