change User Signup page UI

--- a/src/views/Usersignup/Usersignup.css
+++ b/src/views/Usersignup/Usersignup.css
@@ -3,13 +3,22 @@
   width: 30%;
   padding: 10px;
   display: block;
-  margin: 3px auto;
+  margin: 3px 55%;
   background-color: #ef801a;
   color: #fff;
   border: none;
   border-radius: 10px;
   cursor: pointer;
   font-size: 16px;
+}
+.form-div{
+  width: 40%;
+
+  padding-right: 10vw;
+}
+.input{
+  width: 180%;
+
 }
 
 .back-ground-signup {
@@ -24,8 +33,6 @@
   height: 115vh;
 }
 
-<<<<<<< HEAD
-=======
 .emoji-position {
   position: relative;
 }
@@ -55,4 +62,3 @@
     bottom: 15px; /* Adjust position for smaller screens */
   }
 }
->>>>>>> 05268b967b5f4a1226f7098d60d70620d1630abb
