--- a/src/ProfileCard/ProfileCard.css
+++ b/src/ProfileCard/ProfileCard.css
@@ -1,13 +1,13 @@
 
 .profile-img{
-    height: 120px;
-    width: 120px;
+    height: 100%;
+    width: 30%;
     border-radius: 50%;
     display: block;
     margin: 20px auto;
     position: absolute;
     bottom: 120px;
-    left: 120px;
+    left: 35%;
 }
 .user-name{
     margin-top:80px ;
