--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -4,16 +4,16 @@
   width: 300px; 
 } 
 */
-
+/* 
 .login-bg-img {
   background-color: #fff;
   padding: 10px;
   width: 400px;
   margin: 0 auto;
   border-radius: 10px;
-}
+} */
 
-.login-button {
+/* .login-button {
   width: 20%;
   padding: 7px 10px;
   display: block;
@@ -24,21 +24,27 @@
   border-radius: 10px;
   cursor: pointer;
   font-size: 16px;
-}
+} */
 /* .Btn-contanier{
   display: flex;
   justify-content: center;
   padding: 30px;
 } */
 
-.login-button:hover {
+/* .login-button:hover {
   transform: scale(0.9);
-}
+} */
 
 .background-img {
   background-size: cover;
 }
-
+.update-btn{
+  background-color: red;
+  border-radius: 10px;
+  border: none;
+  padding: 10px 20px;
+}
+/* 
 .form {
   background-color: #ffffff7e;
   height: auto;
@@ -46,7 +52,7 @@
   margin: 0 auto;
   padding: 30px;
   border-radius: 20px;
-}
+} */
 
 
 @media (max-width: 768px) {
