--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -7,7 +7,8 @@
   background-color: red;
   border-radius: 10px;
   border: none;
-  padding: 10px 20px;
+  padding: 10px 30px;
+  color:#fff;
 }
 
 
