--- a/src/views/Contact/Contact.css
+++ b/src/views/Contact/Contact.css
@@ -117,3 +117,26 @@ transform: translateY(-20px);
     border-radius: 0.4rem;
     
 }
+@media screen  and (width:360px){
+    .section{
+        height: 100%;
+    }
+    .contact-container{
+        height: 100%;
+    }
+    .contact-info{
+        height: 18rem;
+    }
+    .contact-us {
+     
+        height: 16rem;
+        width: 20rem;
+    }
+
+    .input-data{
+        width: 20rem;
+        padding: 40px;
+      
+      
+    }
+}
