--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -42,6 +42,20 @@
    text-decoration: none;
 }
 .signup{
+    position: absolute;
+    top:17rem;
+   
+    height: 3rem;
+    width: 9rem;
+    padding-left: 2rem;
+    padding-top: 0.4rem;
+    background-color: red;
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 500;
+   border-radius: 2rem;
+   border: none;
+   text-decoration: none;
     left:40rem;
 }
 @media screen and (max-width:360px){
@@ -69,12 +83,18 @@
     }
     .see-nearby{
       
-        top:21rem;
-        left:5rem;
+        top:17rem;
+        left:1rem;
         height: 3rem;
-        width: 13rem;
+       
        
     }
+    .signup{
+        top: 17rem;
+        left: 13rem;
+    }
+    
+
 
 }
 .flex-wrap {
