--- a/src/views/Menucard/Menucard.css
+++ b/src/views/Menucard/Menucard.css
@@ -8,8 +8,8 @@
 
 .select-menu{
     background: rgba(0, 0, 0, 0.658);
-    height: 70vh;
-    width: 70%;
+    height: 65vh;
+    width: 80%;
     margin: auto;
     margin-top: 5rem;
     overflow-y: scroll;
@@ -21,8 +21,8 @@
   padding-top: 2rem;
 }
 .button{
-    height: 2.8rem;
-    width: 30%;
+    height: 40px;
+    width: 25%;
    margin-left: 1rem;
    margin-top: 1rem;
    border:0.5px solid red;
@@ -85,5 +85,13 @@
 @media only screen and (max-width: 768px){
     .card-div{
         margin-left: 20% ;
+    }
+    .cuisines{
+        display: none;
+    }
+    .button{
+        height:50px ;
+        padding-right: 15px;
+        display: inline-block;
     }
 }
